# shell

./: .gitignore  CHANGELOG.md  Makefile  shell.cabal
src/main/: Main.hs  Parser.hs
src/main/Parser/: Internal.hs  Syntax.hs
src/test/: Sandbox.hs  TestParser.hs
