cabal-version:      3.0
name:               shell
version:            0.1.0.0
synopsis:           Bridging the gap between Python and Bash.

-- A longer description of the package.
-- description:
homepage:           https://github.com/

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             wafna
maintainer:         wafna@duck.com

-- A copyright notice.
-- copyright:
category:           Language
extra-source-files: CHANGELOG.md

executable             shell
    build-depends      : base ^>= 4.16.3.0,
                         text ^>= 1.2.5.0,
                         megaparsec ^>= 9.2.2
    main-is            : Main.hs
    other-modules      : Parser
                         Parser.Internal
    ghc-options        : -Wall
    default-extensions : OverloadedStrings
                         RecordWildCards
    hs-source-dirs     : src/main
    default-language   : Haskell2010

test-suite             test
    build-depends      : base ^>= 4.16.3.0,
                         text ^>= 1.2.5.0,
                         megaparsec ^>= 9.2.2,
                         containers ^>= 0.6.5.1,
                         hspec ^>= 2.7.4
    type               : exitcode-stdio-1.0
    main-is            : TestParser.hs
    other-modules      : Parser
                         Parser.Internal
    default-extensions : OverloadedStrings
                         RecordWildCards
    hs-source-dirs     : src/main, src/test
    ghc-options        : -Wall
    default-language   : Haskell2010
